# codex_sandbox

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: health.py  stocks.py
app/core/: config.py
app/schemas/: stock.py
app/services/: stock_service.py
streamlit_app/: dashboard.py
tests/: test_api.py
