[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tech-stocks-platform"
version = "0.1.0"
description = "REST API and dashboard for AI-related technology stocks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "yfinance>=0.2.50,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "plotly>=5.24.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["B008"]
